# crawData

./: .gitignore  README.md  app.py  crawler_runner.py  pyproject.toml  test.py
craw/: play_batdongsan.py
craw/output/2025-11/: 2025-11-14.json  2025-11-15.json
scraper/: __init__.py  browser.py  config.py  mapping.py  runner.py  storage.py  utils.py
scraper/collectors/: __init__.py  detail.py  listing.py
templates/: index.html
