[project]
name = "batdongsan"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "scrapy-playwright (>=0.0.44,<0.0.45)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "selenium (>=4.38.0,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "scraper" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
